--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -133,7 +133,8 @@ apy_data_grid:
     actions_columns_separator:  " "
     pagerfanta:
         enable:               true
-        view_class: Pagerfanta\View\TwitterBootstrapView #default    Pagerfanta\View\DefaultView
+        view_class: Pagerfanta\View\TwitterBootstrapView 
+        #default    Pagerfanta\View\DefaultView
         #options:            #all options of pager fanta view constructor
         #view_class:           Pagerfanta\View\DefaultView
 #==================================================
