--- a/src/Application/CertificatsBundle/Resources/config/routing/eservice.yml
+++ b/src/Application/CertificatsBundle/Resources/config/routing/eservice.yml
@@ -2,6 +2,23 @@ eservice:
     pattern:  /
     defaults: { _controller: "ApplicationCertificatsBundle:Eservice:index" }
 
+eservice_demandes:
+    pattern:  /demandes
+    defaults: { _controller: "ApplicationCertificatsBundle:Eservice:indexdemandesservices" }
+
+eservice_contrat:
+    pattern:  /{id}/contrat
+    defaults: { _controller: "ApplicationCertificatsBundle:Eservice:contrat" }
+
+eservice_other:
+    pattern:  /autres
+    defaults: { _controller: "ApplicationCertificatsBundle:Eservice:indexotherservices" }
+
+eservice_messervices:
+    pattern:  /messervices
+    defaults: { _controller: "ApplicationCertificatsBundle:Eservice:indexmesservices" }
+
+
 eservice_show:
     pattern:  /{id}/show
     defaults: { _controller: "ApplicationCertificatsBundle:Eservice:show" }
