--- a/src/Application/CertificatsBundle/Resources/config/services.yml
+++ b/src/Application/CertificatsBundle/Resources/config/services.yml
@@ -29,9 +29,9 @@ services:
             - [ setFormType, [ @application.form.new.changement ] ]
         
    application.form.new.eservice:
-        class: Application\CertificatsBundle\Form\EserviceContratType
+        class: Application\CertificatsBundle\Form\EserviceContratStepsType
         tags:
-            - { name: form.type, alias: changements }
+            - { name: form.type, alias: eservice }
 
    application.form.flow.new.eservice:
       class: Application\CertificatsBundle\Form\EserviceFlow
