--- a/composer.json
+++ b/composer.json
@@ -33,18 +33,17 @@
      
         "sonata-project/easy-extends-bundle" : "dev-master",
         "sonata-project/cache-bundle": "dev-master",
-        "sonata-project/jquery-bundle": "1.8.3",
-        "sonata-project/admin-bundle": "dev-master",
+       "sonata-project/admin-bundle": "dev-master",
         "sonata-project/block-bundle": "dev-master",
         "sonata-project/doctrine-extensions": "1.0.0",
         "sonata-project/user-bundle": "dev-master",
         "sonata-project/doctrine-orm-admin-bundle": "dev-master",
         "sonata-project/notification-bundle":  "dev-master",
-     
+     "sonata-project/jquery-bundle": "1.8.3",
         "sonata-project/media-bundle" : "dev-master",
         "sonata-project/formatter-bundle": "dev-master",
         "sonata-project/news-bundle":  "dev-master",
-        "sonata-project/intl-bundle" :"dev-master",
+        "sonata-project/intl-bundle" :"2.1.x-dev",
         "genemu/form-bundle": "dev-master",
          "sonata-project/google-authenticator": "1.0.0",
         "sonata-project/markitup-bundle" : "dev-master",
