--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -5,7 +5,7 @@ imports:
     - { resource: sonata/sonata_admin.yml }
     - { resource: sonata/sonata_doctrine.yml }
     - { resource: sonata/sonata_user.yml }
-    #- { resource: sonata/sonata_media.yml }
+    - { resource: sonata/sonata_media.yml }
     - { resource: sonata/sonata_formatter.yml }
     - { resource: sonata/sonata_news.yml }
   #  - { resource: sonata/sonata_page.yml }
@@ -45,21 +45,36 @@ twig:
 #  ASSETIC
 #==================================================
 
+    
+    #assets:
+    #   bootstrap_css:
+    #        inputs:
+    #            - %kernel.root_dir%/../vendor/twitter/bootstrap/less/bootstrap.less
+    #            - %kernel.root_dir%/../vendor/twitter/bootstrap/less/responsive.less
 assetic:
     debug:          %kernel.debug%
     use_controller: false
     bundles:        [ ]
+    # bundles:        [ ApplicationSonataNewsBundle,SonataNewsBundle ]
     #java: /usr/bin/java
     filters:
         cssrewrite: ~
-        cssembed:
-            jar: %kernel.root_dir%/Resources/java/cssembed-0.4.5.jar
-            apply_to: "\.css$|\.less$"
+       # cssembed:
+        #    jar: %kernel.root_dir%/Resources/java/cssembed-0.4.5.jar
+         #   apply_to: "\.css$|\.less$"
         yui_css:
             jar: %kernel.root_dir%/Resources/java/yuicompressor-2.4.7.jar
             apply_to: "\.css$"
         yui_js:
             jar: %kernel.root_dir%/Resources/java/yuicompressor-2.4.7.jar
+       # closure:
+      #      jar: %kernel.root_dir%/Resources/java/compiler.jar
+    #    yui_css:
+     #       jar: %kernel.root_dir%/Resources/java/yuicompressor-2.4.7.jar
+        less:
+            node: /usr/bin/node
+            node_paths: [/opt/less/lib, /usr/lib/node_modules]
+            apply_to: "\.less$"
 #==================================================
 #  DOCTRINE
 #==================================================
@@ -192,29 +207,6 @@ fos_user:
    #   form:
    #     type: myapp_user_registration
 
-sonata_media:
-    default_context: default
-    db_driver: doctrine_orm # or doctrine_mongodb, doctrine_phpcr
-    contexts:
-        default:  # the default context is mandatory
-            providers:
-                - sonata.media.provider.dailymotion
-                - sonata.media.provider.youtube
-                - sonata.media.provider.image
-                - sonata.media.provider.file
-
-            formats:
-                small: { width: 100 , quality: 70}
-                big:   { width: 500 , quality: 70}
-
-    cdn:
-        server:
-            path: /uploads/media # http://media.sonata-project.org/
-
-    filesystem:
-        local:
-            directory:  %kernel.root_dir%/../web/uploads/media
-            create:     false
             
 #frequence_web_calend_r:  []
 
@@ -330,3 +322,9 @@ mopa_bootstrap:
         show_child_legend: false # default is true
         error_type: block # or inline which is default
     navbar: ~
+    
+    
+        
+#bc_bootstrap:
+#    assets_dir: %kernel.root_dir%/../vendor/twitter/bootstrap
+#    jquery_path: %kernel.root_dir%/../vendor/jquery/jquery/jquery-1.9.1.js
