--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -8,6 +8,7 @@ imports:
     - { resource: sonata/sonata_media.yml }
     - { resource: sonata/sonata_formatter.yml }
     - { resource: sonata/sonata_news.yml }
+   # - { resource: genemu/genemu.yml }
   #  - { resource: sonata/sonata_page.yml }
    
 #==================================================
