--- a/app/config/sonata/sonata_media.yml
+++ b/app/config/sonata/sonata_media.yml
@@ -1,9 +1,10 @@
 sonata_media:
     db_driver: doctrine_orm
     class:
-        media:              Sonata\MediaBundle\Entity\Media
-        gallery:            Sonata\MediaBundle\Entity\Gallery
-        gallery_has_media:  Sonata\MediaBundle\Entity\GalleryHasMedia
+        media:              Application\Sonata\MediaBundle\Entity\Media
+        gallery:            Application\Sonata\MediaBundle\Entity\Gallery
+        gallery_has_media:  Application\Sonata\MediaBundle\Entity\GalleryHasMedia
+        
 
     default_context: default
     contexts:
