--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,8 +1,10 @@
 application_certificats:
     resource: "@ApplicationCertificatsBundle/Resources/config/routing.yml"
     prefix:   /
-    
-    
+
+admin_myuser:
+    resource: '@ApplicationSonataUserBundle/Resources/config/routing.yml'
+    prefix: /
     
 fos_user_security:
     resource: "@FOSUserBundle/Resources/config/routing/security.xml"
