--- a/app/config/sonata/sonata_media.yml
+++ b/app/config/sonata/sonata_media.yml
@@ -42,6 +42,7 @@ sonata_media:
     cdn:
         server:
             path:      /uploads/media # http://media.sonata-project.org
+            #path:      /sf2/uploads/media # http://media.sonata-project.org
 
         panther:
             path:       http://domain.pantherportal.com/uploads/media
