--- a/app/config/sonata/sonata_user.yml
+++ b/app/config/sonata/sonata_user.yml
@@ -43,3 +43,5 @@ sonata_block:
         #sonata.media.block.feature_media:
         
    
+parameters:
+    sonata.user.admin.user.class: Application\Sonata\UserBundle\Admin\UserAdmin
