--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -66,7 +66,9 @@ media:
 #  resource: "@RizzaCalendarBundle/Resources/config/routing/event.yml"
 #  prefix: /event
   
-  
+notes:
+    resource: '@ApplicationMyNotesBundle/Resources/config/routing.yml'
+    prefix: /notes  
 news:
     resource: '@SonataNewsBundle/Resources/config/routing/news.xml'
     prefix: /news
