update forms (tinymce)

--- a/app/config/genemu/genemu.yml
+++ b/app/config/genemu/genemu.yml
@@ -1,7 +1,14 @@
 genemu_form:
-
+    autocompleter:
+        doctrine:             true
+        mongodb:              false
     tinymce: ~
-    autocomplete: ~
+    autocomplete:
+         enabled:              true
+         doctrine:             true
+         mongodb:              false
+
+  
     select2:
 
         enabled:              true
