--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
+application_epost:
+    resource: "@ApplicationEpostBundle/Resources/config/routing.yml"
+    prefix:   /
+
 application_relations:
     resource: "@ApplicationRelationsBundle/Resources/config/routing.yml"
     prefix:   /
