tunning epost classe

--- a/src/Application/EpostBundle/Resources/config/routing/epost.yml
+++ b/src/Application/EpostBundle/Resources/config/routing/epost.yml
@@ -1,6 +1,10 @@
 epost_indexadmin:
     pattern:  /
     defaults: { _controller: "ApplicationEpostBundle:Epost:indexAll" }
+
+epost_indexstandard:
+    pattern:  /blog
+    defaults: { _controller: "ApplicationEpostBundle:Epost:standardblog" }
     
 epost:
     pattern:  /postdashboard
