--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -9,7 +9,7 @@ security:
         FOS\UserBundle\Model\UserInterface: sha512
  
     role_hierarchy:
-        ROLE_ADMIN:       ROLE_USER
+        ROLE_ADMIN:       [ROLE_USER, ROLE_SONATA_ADMIN]
         ROLE_SUPER_ADMIN: [ROLE_USER, ROLE_SONATA_ADMIN, ROLE_ADMIN, ROLE_ALLOWED_TO_SWITCH]
         SONATA:
             - ROLE_SONATA_PAGE_ADMIN_PAGE_EDIT  # if you are not using acl then this line must be uncommented
@@ -22,6 +22,8 @@ security:
  
         # -> custom firewall for the admin area of the URL
         admin:
+            switch_user:        true
+            context:            user
             pattern:      /admin(.*)
             form_login:
                 provider:       fos_userbundle
@@ -36,6 +38,14 @@ security:
  
         # defaut login area for standard users
         main:
+            remember_me:
+                   httponly: false
+                   key:      "%secret%"
+                   lifetime: 31536000 # 365 days in seconds
+                   path:     /
+                   domain:   ~ # Defaults to the current domain from $_SERVER
+            switch_user:        true
+            context:            user
             pattern:      .*
             form_login:
                 provider:       fos_userbundle
