--- a/composer.json
+++ b/composer.json
@@ -44,7 +44,7 @@
         "sonata-project/formatter-bundle": "dev-master",
         "sonata-project/news-bundle":  "dev-master",
         "sonata-project/intl-bundle" :"2.1.x-dev",
-        "genemu/form-bundle": "dev-master",
+        "genemu/form-bundle": "2.2.*@dev",
          "sonata-project/google-authenticator": "1.0.0",
         "sonata-project/markitup-bundle" : "dev-master",
         
