update group user

--- a/app/config/sonata/sonata_media.yml
+++ b/app/config/sonata/sonata_media.yml
@@ -38,7 +38,17 @@ sonata_media:
                 small: { width: 150 , quality: 95}
                 big:   { width: 500 , quality: 90}
                 mini: { width: 50 , quality: 70}
-
+        avatar:
+            download:
+                strategy: sonata.media.security.superadmin_strategy
+                mode: http
+            providers:
+                - sonata.media.provider.image
+        
+            formats:
+                small: { width: 150 , quality: 95}
+                big:   { width: 500 , quality: 90}
+                mini: { width: 50 , quality: 70}
     cdn:
         server:
             path:      /uploads/media # http://media.sonata-project.org
