--- a/composer.json
+++ b/composer.json
@@ -65,7 +65,10 @@
          "egeloen/google-map-bundle": "*",
            "willdurand/geocoder": "*",
            "kriswallsmith/buzz": "*",
-           "stof/doctrine-extensions-bundle": "1.1.*@dev"
+           "stof/doctrine-extensions-bundle": "1.1.*@dev",
+                 "lexik/form-filter-bundle": "dev-master",
+        "savvy/filternator-bundle": "dev-master"
+ 
          
         
     },
