--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -41,7 +41,9 @@ framework:
 twig:
     debug:            %kernel.debug%
     strict_variables: %kernel.debug%
-
+    form:
+        resources:
+            - LexikFormFilterBundle:Form:form_div_layout.html.twig
 #==================================================
 #  ASSETIC
 #==================================================
