--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
         "doctrine/data-fixtures": "dev-master",
         "kriswallsmith/assetic": "1.1.*@dev",
         "mopa/composer-bridge": "dev-master",
-        "mopa/bootstrap-bundle": "dev-master",
+      "mopa/bootstrap-bundle": "2.2.*@dev",
         "apy/datagrid-bundle": "dev-master",
         "friendsofsymfony/user-bundle": "v1.3.1",
         "knplabs/knp-paginator-bundle": "dev-master", 
