--- a/src/Application/EpostBundle/Resources/config/routing/epostcomments.yml
+++ b/src/Application/EpostBundle/Resources/config/routing/epostcomments.yml
@@ -1,15 +1,15 @@
 epost_comment_create:
-    pattern:  /epostcomment/{epost_id}
+    pattern:  /{epost_id}
     defaults: { _controller: ApplicationEpostBundle:EpostComments:create }
     requirements:
         _method:  POST
         epost_id: \d+
 
 epost_comment_ownerview:
-    pattern:  /epostcomment/view
+    pattern:  /view
     defaults: { _controller: ApplicationEpostBundle:EpostComments:indexowner }
     
 epost_comment_ownerblogview:
-    pattern:  /epostcomment/blog
+    pattern:  /blog
     defaults: { _controller: ApplicationEpostBundle:EpostComments:indexownerblog }
      
