--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -80,3 +80,9 @@ news:
 usermedia:
     resource: '@ApplicationSonataMediaBundle/Resources/config/routing.yml'
     prefix: /
+    
+fos_comment_api:
+    type: rest
+    resource: "@FOSCommentBundle/Resources/config/routing.yml"
+    prefix: /api
+    defaults: { _format: html }
