--- a/composer.json
+++ b/composer.json
@@ -44,7 +44,7 @@
         "sonata-project/formatter-bundle": "dev-master",
         "sonata-project/news-bundle":  "dev-master",
         "sonata-project/intl-bundle" :"2.1.x-dev",
-        "genemu/form-bundle": "2.2.*@dev",
+        "genemu/form-bundle": "2.1.*@dev",
          "sonata-project/google-authenticator": "1.0.0",
         "sonata-project/markitup-bundle" : "dev-master",
         
@@ -67,7 +67,9 @@
            "kriswallsmith/buzz": "*",
            "stof/doctrine-extensions-bundle": "1.1.*@dev",
                  "lexik/form-filter-bundle": "dev-master",
-        "savvy/filternator-bundle": "dev-master"
+        "savvy/filternator-bundle": "dev-master",
+        "jms/serializer-bundle": "0.12.*@dev",
+        "friendsofsymfony/comment-bundle": "2.0.*@dev"
  
          
         
