--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -108,7 +108,7 @@ doctrine:
             string_functions:
                         GroupConcat: DoctrineExtensions\Query\Mysql\GroupConcat
                         concat_ws: DoctrineExtensions\Query\Mysql\ConcatWs
-                        #GroupConcat: Application\ChangementsBundle\Query\Mysql\GroupConcat
+                        XGroupConcat: Application\ChangementsBundle\Query\Mysql\XGroupConcat
 
 
 #==================================================
